--- a/src/app/panel/directorios/nuevos-carros/nuevos-carros.component.html
+++ b/src/app/panel/directorios/nuevos-carros/nuevos-carros.component.html
@@ -8,7 +8,7 @@
       <div class="user-buttons">
         <a (click)="editBrand(0,'')" ><i class="fas fa-plus"></i></a>
         <a><i class="fas fa-bell" [routerLink]="['/admin/notify']"></i></a>
-        <div class="number-pink">3</div>
+        <div class="number-pink"> {{alert}} </div>
         <div class="input">
           <i class="fas fa-search"></i>
           <input type="text" name="search" />
