--- a/src/app/panel/manejo-usuario/perfil/perfil.component.html
+++ b/src/app/panel/manejo-usuario/perfil/perfil.component.html
@@ -3,7 +3,7 @@
   <div class="row align-items-center">
     <div class="col-auto">
       <div class="info">
-        <img [src]="user.image_source || defaultImg" />
+        <img [src]="defaultImg" />
         <label>{{user.fullname}}
           <span>{{user.role}}</span>
         </label>
