--- a/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
+++ b/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
@@ -36,7 +36,7 @@
                     <label>Usuario <span>*</span></label>
                     <input (change)="change($event.srcElement.value, 'user')" [value]="object.user" type="text" />
                 </div>
-                <button (click)="makeid(8)">Generar contraseña</button>
+                <!-- <button (click)="makeid(8)">Generar contraseña</button> -->
                 <div class="input">
                     <label>Contraseña <span>*</span></label>
                     <input (change)="change($event.srcElement.value, 'pass')" [value]="object.pass" type="password" />
