--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,11 +8,15 @@
       <mat-label>Usuario</mat-label>
       <input [(ngModel)]="user" matInput>
     </mat-form-field>
-    <mat-form-field appearance="outline">
+
+    <mat-form-field appearance="outline" >
       <mat-label>Contraseña</mat-label>
-      <input type="password" [(ngModel)]="password" matInput>
-      <mat-hint> <a href=""> Olvidate tu contraseña? </a> </mat-hint>
+      <input matInput [(ngModel)]="password" [type]="hide ? 'password' : 'text'">
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
     </mat-form-field>
+    
     <button (click)="login()" type="button" class="btn bg-pink btn-lg text-white">Iniciar sesión</button>
   </div>
 </section>
