--- a/src/app/panel/directorios/usuarios/usuarios.component.html
+++ b/src/app/panel/directorios/usuarios/usuarios.component.html
@@ -1,7 +1,7 @@
 <div class="user-wrapper">
     <div class="user-container">
         <div class="email">
-            <label>Email</label>
+            <label>Buscar</label>
         </div>
         <div class="user-head">
             <h2>Usuarios</h2>
