--- a/src/app/panel/directorios/servicios/servicios.component.html
+++ b/src/app/panel/directorios/servicios/servicios.component.html
@@ -1,7 +1,7 @@
 <div class="user-wrapper">
     <div class="user-container">
         <div class="email">
-            <label>Email</label>
+            <label>Buscar</label>
         </div>
         <div class="user-head">
             <h2>Servicios </h2>
@@ -10,15 +10,15 @@
                 <div class="number-pink"> {{GetPend}} </div>
                 <div class="input">
                     <i class="fas fa-search"></i>
-                    <input type="text" name="search" (click)="search = !search" />
+                    <input type="text" [(ngModel)]="searchName" name="search" (keyup)="search()" />
                 </div>
             </div>
         </div>
         <div class="user-nav">
-            <div class="nav-title" [ngClass]="{selected: nav === 'admin'}" (click)="nav = 'admin'">
+            <div class="nav-title" [ngClass]="{selected: nav === 'admin'}" (click)="reset('admin')">
                 <h3>Tiempo Real</h3>
             </div>
-            <div class="nav-title" [ngClass]="{selected: nav === 'wiz'}" (click)="nav = 'wiz'">
+            <div class="nav-title" [ngClass]="{selected: nav === 'wiz'}" (click)="reset('wiz')">
                 <h3>Historial</h3>
             </div>
         </div>
@@ -27,7 +27,7 @@
                 <thead>
                     <tr>
                         <th>Fecha/Hora</th>
-                        <th class="text-center">ID del wizpecialista</th>
+                        <th class="text-center">Usuario</th>
                         <th>Tipo</th>
                         <th>Total Servicio</th>
                         <th>Estatus</th>
@@ -36,11 +36,11 @@
                 <tbody>
                     <tr *ngFor="let user of services; let i = index">
                         <td class="py-3">{{ user.created_at | date: 'short' }}</td>
-                        <td  class="text-center" >{{ user.car_size.id }}</td>
-                        <td>{{ user.car_size.name }}</td>
-                        <td>{{ user.cost }}</td>
+                        <td  class="text-center" >{{ user.client.fullname }}</td>
+                        <td>{{ user.service_type_name }}</td>
+                        <td>{{ user.total_cost }}</td>
                         <td>
-                            <button class="active">status</button>
+                            <button class="active">{{user.status}}</button>
                         </td>
                     </tr>
                 </tbody>
@@ -49,7 +49,7 @@
                 <thead>
                     <tr>
                         <th>Fecha/Hora</th>
-                        <th class="text-center">ID del wizpecialista</th>
+                        <th class="text-center">usuario</th>
                         <th>Tipo</th>
                         <th>Total Servicio</th>
                         <th>Estatus</th>
@@ -58,15 +58,23 @@
                 <tbody>
                     <tr *ngFor="let user of services; let i = index">
                         <td class="py-3">{{ user.created_at | date: 'short' }}</td>
-                        <td class="text-center" >{{ user.car_size.id }}</td>
-                        <td>{{ user.car_size.name }}</td>
-                        <td>{{ user.cost }}</td>
+                        <td  class="text-center" >{{ user.client.fullname }}</td>
+                        <td>{{ user.service_type_name }}</td>
+                        <td>{{ user.total_cost }}</td>
                         <td>
-                            <button class="active">status</button>
+                            <button class="active">{{user.status}}</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
+            <div class="pagination mt-3">
+                <button mat-button (click)="prePage()" [disabled]="skipTable == 0" >
+                    <mat-icon> first_page </mat-icon>
+                </button>
+                <button mat-button (click)="nextPage()" >
+                    <mat-icon> last_page </mat-icon>
+                </button>
+            </div>
         </div>
     </div>
 </div>
