--- a/src/app/panel/directorios/usuarios/usuarios.component.scss
+++ b/src/app/panel/directorios/usuarios/usuarios.component.scss
@@ -100,6 +100,7 @@
         .user-tables {
             width: 100%;
             display: flex;
+            flex-flow: column;
             justify-content: flex-start;
             table {
                 width: -webkit-fill-available;
